@@ -26,7 +26,7 @@ RPM_LDADD = \
 	$(top_builddir)/misc/librpmmisc.la \
 	@LTLIBINTL@
 
-EXTRA_DIST = genpgp.sh getdate.y librpm.vers tpgp.c
+EXTRA_DIST = genpgp.sh librpm.vers tpgp.c
 
 EXTRA_PROGRAMS = tgi tpgp tsbt
 
@@ -41,7 +41,7 @@ noinst_HEADERS = \
 usrlibdir = $(libdir)
 usrlib_LTLIBRARIES = librpm.la
 librpm_la_SOURCES = \
-	depends.c formats.c fs.c fsm.c getdate.c \
+	depends.c formats.c fs.c fsm.c \
 	manifest.c misc.c package.c \
 	poptALL.c poptI.c poptQV.c psm.c query.c \
 	rpmal.c rpmchecksig.c rpmdpkg.c rpmds.c rpmevr.c rpmfc.c \
@@ -82,38 +82,7 @@ if WITH_PATH_VERSIONED
 	done
 endif
 
-getdate.c: getdate.y
-	@echo expect 10 shift/reduce conflicts
-	$(YACC) $(srcdir)/getdate.y
-	-@if test -f y.tab.c; then \
-	 { echo "/*@-globstate -statictrans -unqualifiedtrans -noparams @*/";\
-	   echo "/*@-retvalint -usedef -varuse -nullderef -nullassign @*/";\
-	   echo "/*@-readonlytrans -modunconnomods -compdef -noeffectuncon @*/";\
-	   echo "/*@-globs -evalorderuncon -modobserveruncon -modnomods @*/";\
-	   echo "/*@-noeffect -branchstate -sizeoftype -usereleased @*/";\
-	   echo "/*@unused@*/";\
-	   sed	-e 's,y.tab.c,getdate.c,' y.tab.c \
-		-e 's,^YYSTYPE ,static &,' \
-		-e 's,^short ,static &,' \
-		-e 's,^const short ,static &,' \
-		-e 's,^int yydebug,/*@unused@*/ static &,' \
-		-e 's,^int ,static &,' ;\
-	   echo "/*@=noeffect =branchstate =sizeoftype =usereleased @*/";\
-	   echo "/*@=globs =evalorderuncon =modobserveruncon =modnomods @*/";\
-	   echo "/*@=readonlytrans =modunconnomods =compdef =noeffectuncon @*/";\
-	   echo "/*@=retvalint =usedef =varuse =nullderef =nullassign @*/";\
-	   echo "/*@=globstate =statictrans =unqualifiedtrans =noparams @*/";\
-	 } > getdate.c ;\
-	   rm -f y.tab.c; \
-	else \
-	   if test -f getdate.tab.c ; then \
-	       mv getdate.tab.c getdate.c ; \
-	   else \
-	       echo '*** Unable to create getdate.c' ;\
-	   fi ;\
-	fi
-
-BUILT_SOURCES = getdate.c # rpmlib.lcd
+BUILT_SOURCES = # rpmlib.lcd
 
 rpmlib.lcd: Makefile.am ${librpm_la_SOURCES} ${pkginc_HEADERS} ${noinst_HEADERS}
 	-lclint ${DEFS} ${INCLUDES} ${librpm_la_SOURCES} -dump $@ 2>/dev/null
